[17:10] 유효성 검사 부분 변경  - 입력 또는 수정 버튼을 클릭 시 유효성 검사하는 것을 입력 폼 키 입력 이벤트를 통해 검사하는 방식으로 변경

--- a/AjaxCRUD/src/main/webapp/member.html
+++ b/AjaxCRUD/src/main/webapp/member.html
@@ -73,68 +73,101 @@ $(document).ready(function(){
 		});
 		
 	});
-	// 입력 박스에 값 입력 시 ~Check 텍스트 초기화
+	
+	// 아이디 정규식
+	// 영문 소문자, 숫자 4~12자리
+	let id = /^[a-z0-9]{4,12}$/;
+	// 비밀번호 정규식
+	// 영문 대소문자, 숫자 4~12자리
+	let pw = /^[A-Za-z0-9]{4,12}$/; 
+	// 이름 정규식
+	// 한글 2~6자리
+	let name = /^[가-힣]{2,6}$/;
+	// 나이 정규식
+	// 숫자 1~2자리
+	let age = /^[0-9]{1,2}$/;
+	
+	let idCheck = false; 
+	// 입력 박스에 값 입력 시
 	$('#id').on('change paste keyup', function() { 
-    	$('#idCheck').empty();
+    	$('#idCheck').empty(); // idCheck 초기화
+    	if($('#id').val() == ""){ // 공백 검사
+			$('#idCheck').text("아이디를 입력하세요");
+		}else if(!id.test($('#id').val())){ // 유효성 검사 
+			$('#idCheck').text("올바른 아이디를 입력하세요");
+			$('#id').focus();
+		}else{ // 유효성 검사 만족 시
+			idCheck = true;
+		}
     });
+	
+	let pwCheck = false;
 	$('#pw').on('change paste keyup', function() { 
-    	$('#pwCheck').empty();
+    	$('#pwCheck').empty(); 
+    	if($('#pw').val() == ""){ 
+			$('#pwCheck').text("비밀번호를 입력하세요");
+		}else if(!pw.test($('#pw').val())){
+			$('#pwCheck').text("올바른 비밀번호를 입력하세요");
+			$('#pw').focus();
+		}else{ 
+			pwCheck = true;
+		}
     });
+	
+    let nameCheck = false;
 	$('#name').on('change paste keyup', function() { 
     	$('#nameCheck').empty();
+    	if($('#name').val() == ""){
+			$('#nameCheck').text("이름을 입력하세요");
+		}else if(!name.test($('#name').val())){
+			$('#nameCheck').text("올바른 이름을 입력하세요");
+			$('#name').focus();
+		}else{
+			nameCheck = true;
+		}
     });
+	
+	let ageCheck = false;
 	$('#age').on('change paste keyup', function() { 
     	$('#ageCheck').empty();
+    	if($('#age').val() == ""){
+			$('#ageCheck').text("나이를 입력하세요");
+		}else if(!age.test($('#age').val())){
+			$('#ageCheck').text("올바른 나이를 입력하세요");
+			$('#age').focus();
+		}else{
+			ageCheck = true;
+		}
     });
+	
+	let genderCheck = false;
 	$('#gender').change(function(){
 		$('#genderCheck').empty();
+		if($('#gender').val() == ""){
+			$('#genderCheck').text("성별을 선택하세요");
+		}else{
+			genderCheck = true;
+		}
 	});
 	
     // 추가
     $('#btnAdd').click(function(){
-		console.log('btnAdd 버튼 테스트')
-		// 아이디 정규식
-		// 영문 소문자, 숫자 4~12자리
-		let id = /^[a-z0-9]{4,12}$/;
-		// 비밀번호 정규식
-		// 영문 대소문자, 숫자 4~12자리
-		let pw = /^[A-Za-z0-9]{4,12}$/; 
-		// 이름 정규식
-		// 한글 2~6자리
-		let name = /^[가-힣]{2,6}$/;
-		// 나이 정규식
-		// 숫자 1~2자리
-		let age = /^[0-9]{1,2}/;
-		
-		// 공백 검사
-		if($('#id').val() == ""){
-			$('#idCheck').text("아이디를 입력하세요");
-		}
-		if($('#pw').val() == ""){
-			$('#pwCheck').text("비밀번호를 입력하세요");
-		}
-		if($('#name').val() == ""){
-			$('#nameCheck').text("이름을 입력하세요");
-		}
-		if($('#age').val() == ""){
-			$('#ageCheck').text("나이를 입력하세요");
-		}
-		if($('#gender').val() == ""){
-			$('#genderCheck').text("성별을 선택하세요");
-		}
-		// 정규식 표현 검사
-		else if(!id.test($('#id').val())){
-			$('#idCheck').text("올바른 아이디를 입력하세요");
+		console.log('btnAdd 버튼 테스트');
+		if(idCheck == false){
+			$('#idCheck').text("아이디를 확인하세요");
 			$('#id').focus();
-		}else if(!pw.test($('#pw').val())){
-			$('#pwCheck').text("올바른 비밀번호를 입력하세요");
+		}else if(pwCheck == false){
+			$('#pwCheck').text("비밀번호를 확인하세요");
 			$('#pw').focus();
-		}else if(!name.test($('#name').val())){
-			$('#nameCheck').text("올바른 이름을 입력하세요");
+		}else if(nameCheck == false){
+			$('#nameCheck').text("이름을 확인하세요");
 			$('#name').focus();
-		}else if(!age.test($('#age').val())){
-			$('#ageCheck').text("올바른 나이를 입력하세요");
+		}else if(ageCheck == false){
+			$('#ageCheck').text("나이를 확인하세요");
 			$('#age').focus();
+		}else if(genderCheck == false){
+			$('#genderCheck').text("성별을 확인하세요");
+			$('#gender').focus();
 		}else {
 			// 모든 값이 입력됐을 때 비동기 통신 요청
 			let id = $('#id').val();
@@ -166,18 +199,6 @@ $(document).ready(function(){
     //수정
     $('#btnModify').click(function(){
 		console.log('btnModify 버튼 테스트')
-		// 아이디 정규식
-		// 영문 소문자, 숫자 4~12자리
-		let id = /^[a-z0-9]{4,12}$/;
-		// 비밀번호 정규식
-		// 영문 대소문자, 숫자 4~12자리
-		let pw = /^[A-Za-z0-9]{4,12}$/; 
-		// 이름 정규식
-		// 한글 2~6자리
-		let name = /^[가-힣]{2,6}$/;
-		// 나이 정규식
-		// 숫자 1~2자리
-		let age = /^[0-9]{1,2}/;
 		
 		// 공백 검사
 		if($('#id').val() == ""){
